2004-04-24  Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/pnm.c: Defend against malevolent pnm "P7" files that
	try to set the colormap length < 256.  Bugfix from Cristy.

2005-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Added latest news.

2005-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (XDelay): Prefer use of select() over poll()
	since it is more portable.  MacOS-X has a poll() but it doesn't
	work right.

2005-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (OpenCache): Fix a memory resource leak noticed
	by Stefan v. Wachter <svwa-dev@mnet-online.de>.  This error with
	keeping track of resources may eventually cause GraphicsMagick to
	run slower and slower due to using disk-based images rather than
	memory-based images.

2005-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (AllocateString): Performance enhancement.
	(CloneString): Performance enhancement.
	(ConcatenateString): Performance enhancement.

2005-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Eliminate cause of annoying
	warning when PDFs are read by Ghostscript 8.5.
	* magick/module.c: Working DIR * should not be const.
	* magick/nt_base.c (closedir): Fix function definition so it
	matches POSIX standard.
	(opendir): Fix function definition so it matches POSIX standard.

2005-03-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType):  Bilevel image is not required to
	be PseudoClass type.
	* coders/mpc.c (WriteMPCImage): Persist is_monochrome and
	is_grayscale flags.
	(ReadMPCImage): Restore is_monochrome and is_grayscale flags.

2005-03-09  Arne Rusek  <zonk@matfyz.cz>

	* magick/attribute.c (GenerateEXIFAttribute): Offset type
	correction to fix loop termination if size_t type is not 'long'.

2005-03-09  Alexander Yaworsky  <yaworsky@users.sourceforge.net>
