@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2005-04-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> utilities/Makefile.am (check): Add a convolution parameter so
+        that the convolve demo actually does something.
+
+</UL>
+<p>
 2004-04-24  Glenn Randers-Pehrson &lt;glennrp@glennrp.com&gt;
 
 <UL>
